--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,16 +1,3 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-
-    <title>TH | Payment Processing App</title>
-  </head>
-  <body>
     <nav class="navbar navbar-expand-sm navbar-light bg-light">
       <div class="container-left justify-content-center text-center">
         <div class="navbar-brand">Logo</div>
@@ -22,58 +9,75 @@
           <li class="nav-item"><a class="nav-link" href="#">course</a></li> <!-- Scss -->
         </ul>
       </div>
-      </nav>
-      
+    </nav>
       <header class="container text-center">
         <h1 class="page-header">Hello, world!</h1>
 
       </header>
-      <main class="container">
-        <div class="row gx-2">
-
-          <section class="col-sm-8">
-            <div class="card">
-              <h4 class='card-title'>Basket</h4>
-
-            </div>
+      <main class="container-fluid">
+        <div class="row">
+          <section class="col-sm">
+            {{> product/card}}
           </section>
+
           <section class="col-sm">
             <div class="card">
-              <div class="card-body">
-                <h4 class="card-title text-capitalize">Shopping Basket</h4>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus eveniet nihil iure reiciendis assumenda fugiat odit harum placeat quo repellendus?</p>
-                <table class="table table-striped text-capitalize">
-                  <thead>
-                    <tr>
-                      <th scope="col">#</th>
-                      <th scope="col">Item</th>
+              <h4 class='card-title'>Frequently Bought With</h4>
+              <div class="row">
+                <div class="col">1</div>
+                <div class="col">2</div>
+              </div>
+              <div class="row">
+                <div class="col">3</div>
+                <div class="col">4</div>
+                <div class="col">5</div>
+              </div>
+              <div class="row">
+                <div class="col">6</div>
+                <div class="col">7</div>
+              </div>
+            </div>
+          </section>
+            
+            <section class="col-sm">
+              <div class="card">
+                <div class="card-body">
+                  <h4 class="card-title text-capitalize">Shopping Basket</h4>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus eveniet nihil iure reiciendis assumenda fugiat odit harum placeat quo repellendus?</p>
+                  <table class="table table-striped text-capitalize table-hover">
+                    <thead>
+                      <tr>
+                        <th scope="col">#</th>
+                        <th scope="col">Item</th>
                       <th scope="col">Price</th>
                       <th scope="col">Qty</th>
                       <th scope="col">Total</th>
                     </tr>
                   </thead>
                   <tbody>
+                    {{#each user.basket}}
                     <tr>
-                      <th scope="row">1</th>
-                      <td>Shoes</td>
-                      <td>£14.99</td>
+                      <th scope="row">{{formatBasketItems @index}}</th>
+                      <td class="basket-product">{{shoes1.nomenclature.productName}}</td>
+                      <td>£{{shoes1.pricing.priceGBP}}</td>
                       <td>1</td>
                       <td>£14.99</td>
                     </tr>
-                    <tr>
+                    {{/each}}
+                    {{!-- <tr>
                       <th scope="row">2</th>
-                      <td>shirt</td>
+                      <td class="basket-product">shirt</td>
                       <td>£24.99</td>
                       <td>1</td>
                       <td>£24.99</td>
                     </tr>
                     <tr>
                       <th scope="row">3</th>
-                      <td>trousers</td>
+                      <td class="basket-product">trousers</td>
                       <td>£29.99</td>
                       <td>1</td>
                       <td>£29.99</td>
-                    </tr>
+                    </tr> --}}
                   </tbody>
                 </table>
                 
@@ -81,7 +85,7 @@
                 <button type="button" class="btn btn-secondary btn-sm text-capitalize">back to store</button>
               </div>
             </div>
-            </section>
+          </section>
           </div>
         </main>
         
@@ -89,6 +93,5 @@
         
         <!-- Option 1: Bootstrap Bundle with Popper -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
-        
-      </body>
-</html>
+        <script src="foo.js"></script>
+       
